# 2D_Ising_Metropolis

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  avg_stdev.h  cmake_install.cmake  configuration.h  main  main.cpp  metropolis.h
results/: beta=0.5000_N=256_bias=1.22.mkv
