cmake_minimum_required(VERSION 2.8)
project( main )
find_package( OpenCV REQUIRED core imgproc videoio highgui)
find_package(fmt)
#add_definitions(-DDEBUG)
#set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_FLAGS "-O3 -Wall -Wextra")
add_executable( main main.cpp )
target_link_libraries( main ${OpenCV_LIBS} fmt::fmt)
